Bug 165150 - problem with coping files larger that 2 gb
Summary: problem with coping files larger that 2 gb
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: sftp (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Andreas Schneider
URL:
Keywords:
: 166480 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-27 22:36 UTC by Jonas Vejlin
Modified: 2009-09-17 14:54 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonas Vejlin 2008-06-27 22:36:23 UTC
Version:           1.0.99 (using 4.00.82 (KDE 4.0.82 >= 20080610), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.25-2-686

I tried to copy a file via sftp://host (browsed via dolpin) to a place on my localhost (also browsed via dolpin). The copying is started at it should be but when it reach exactly 2 gb it stops and tells me that it cannot write to disk
Comment 1 FiNeX 2008-06-28 10:54:43 UTC
what filesystem are you using?
Comment 2 Jonas Vejlin 2008-06-28 15:59:40 UTC
ext3
Comment 3 Pino Toscano 2008-10-26 18:32:57 UTC
*** Bug 166480 has been marked as a duplicate of this bug. ***
Comment 4 Andreas Schneider 2009-09-08 12:08:44 UTC
kio_sftp has been rewritten using libssh in trunk. I have to support seek64 and tell64. I will release a new libssh version and support big files soon. This will be in KDE 4.4.0.
Comment 5 Andreas Schneider 2009-09-17 14:54:03 UTC
SVN commit 1024867 by anschneider:

Added support for files bigger than 2 GB.

BUG: 165150


 M  +5 -5      kio_sftp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1024867