Added support for files bigger than 2 GB.

BUG: 165150

svn path=/trunk/KDE/kdebase/runtime/; revision=1024867